From SPIFFS to LittleFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,7 @@ framework = arduino
 monitor_speed = 115200
 
 
+board_build.filesystem = littlefs   # ✅ Required for build/upload
 
 #upload_protocol = espota
 #upload_port = mlatoolbox.local
